# fasthtml-rag

./: .gitignore  README.md  pyproject.toml
src/fasthtml_rag/: app.py
src/fasthtml_rag/document_sources/: base.py  local_files.py  plugins.py
src/fasthtml_rag/embeddings/: base.py  ollama.py
src/fasthtml_rag/vectorstore/: base.py  chroma.py
