[project]
    name = "fasthtml-rag"
    version = "0.1.0"
    description = "using fasthtml to make a chat/rag app to learn fasthtml"
    readme = "README.md"
    authors = [{ name = "graham", email = "graham.annett@gmail.com" }]
    requires-python = ">=3.12"
    dependencies = [
        "chromadb>=0.6.3",
        "claudette>=0.1.3",
        "numpy>=2.2.2",
        "ollama>=0.4.7",
        "python-fasthtml>=0.12.1",
        "starlette>=0.45.3",
        "watchdog>=6.0.0",
    ]

[build-system]
    requires = ["hatchling"]
    build-backend = "hatchling.build"
